fix: add the use of github token

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,6 +18,7 @@ jobs:
     - uses: googleapis/release-please-action@v4
       id: release
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         release-type: simple
 
     # - uses: actions/checkout@v2
