--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,12 +13,13 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps: 
-    - uses: googleapis/release-please-action@v4
+    - id: release_please
+      uses: googleapis/release-please-action@v4
       with:
         release-type: simple
 
     - run: echo "Release-Please Action completed successfully!"
-      if: ${{ steps.release-please.outputs.release_created == 'true' }}
+      if: ${{ steps.release_please.outputs.release_created == 'true' }}
 
     # - uses: actions/checkout@v2
 
